# WhatToCook

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  debug-backend.sh  debug.sh  docker-compose.yml  missing_api.md  pyproject.toml  setup.sh
Dockerfiles/: backend.Dockerfile  flux.Dockerfile  frontend.Dockerfile  worker.Dockerfile
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_json_to_jsonb.py  0003_recipe_user_api_fields.py  0004_user_pricing_and_sessions.py
backend/scripts/: seed_recipes.py
backend/src/whattocook/: config.py  dependencies.py  main.py  telemetry.py
backend/src/whattocook/adapters/embedding/: gemini.py  local_vllm.py  mock.py
backend/src/whattocook/adapters/image_generation/: flux_dev.py  mock.py
backend/src/whattocook/adapters/job_queue/: redis_queue.py
backend/src/whattocook/adapters/llm/: gemini.py  local_vllm.py  mock.py
backend/src/whattocook/adapters/storage/: s3_compatible.py
backend/src/whattocook/adapters/vector_search/: pgvector.py
backend/src/whattocook/agent/: graph.py  state.py  tools.py
backend/src/whattocook/agent/nodes/: analyze_image.py  create_image.py  generate_image_prompt.py  generate_recipe.py  normalize.py  persist.py  retrieve.py
backend/src/whattocook/api/: admin_dashboard.py  auth.py  jobs.py  recipe_generation.py  recipe_mappers.py  recipe_nutrition.py  recipes.py  router.py  schemas.py  uploads.py  user_preferences.py  user_profile.py  users.py
backend/src/whattocook/db/: models.py  session.py
backend/src/whattocook/db/repositories/: billing.py  embedding.py  recipe.py  upload.py  user.py
backend/src/whattocook/domain/: exceptions.py  models.py
backend/src/whattocook/ports/: embedding.py  image_generation.py  job_queue.py  llm.py  object_storage.py  vector_search.py
backend/src/whattocook/worker/: __main__.py  tasks.py  text_generation.py  tracing.py
backend/tests/: conftest.py
backend/tests/integration/: test_agent_pipeline.py  test_api_flow.py
backend/tests/unit/: test_adapters.py  test_agent_nodes.py  test_api.py
flux-worker/: pyproject.toml
flux-worker/src/flux_worker/: main.py  pipeline.py  telemetry.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
tmp_stitch_html/: cooking_level_modal.html  how_it_works.html  notification_preferences_modal.html  personalization_onboarding.html  privacy_settings_modal.html  registration_pricing.html  update_payment_modal.html
(+49 files in other folders)
